--- a/21-Impacto_de_Datos_sin_Sentido.Rmd
+++ b/21-Impacto_de_Datos_sin_Sentido.Rmd
@@ -2,9 +2,18 @@
 
 Por: Raymond L. Tremblay
 
-El valor principal de los estudios científicos proviene es que los datos representa una visión suficiente cerca a la realidad. En ningún estudio ecológico se podrá obtener **TODOS** los datos para evaluar la relación biótica y abiótica sobre un organismos y todas sus interacciones.   Ese modelo es primero demasionado complejo y irreal dentro del concepto de trabajo científico. El objetivo es tener una apreciación de los parámetros más importante para definir un cierto patrón o interacciones. Por consecuencia la base de todo estudios esta fundado en las unidades de los muestreos de colección de datos. Si los datos no representa la realidad del estudio la interpretaciones de los analisis pudiese ser erronea. La matematica y sus ecuaciones y modelos no harán que la biología sea más cerca a la realidad si desde el principio los datos y el metodo de recolección de datos es erróneo.  
 
-En esta sección evaluamos diferentes aspectos de los analisis matriciales poblacional de projección y diferentes aspectos de la recolección de datos que pudiese ser problemáticos cuando uno considera la biología de una especie. Estos "Impactos" no pretenden incluir todos las posibles efecto de datos sin sentido, sino unos ejemplos si uno no considera estos problemas y cómo pueden distorsionar las interpretaciones. Por lo tanto, una advertencia a todos los biólogos de población para que estén consciente de estos temas.
+```{r}
+if (!require("pacman")) install.packages("pacman")
+pacman::p_load("DiagrammeR", "Rage", "popdemo", "popbio", "interpretCI", 
+               "MCMCpack", "ggplot2", "plyr", "reshape")
+
+```
+
+
+El valor principal de los estudios científicos proviene en que los datos representa una visión suficiente cerca a la realidad y sirve para inferir información sobre la ecología de la especie de interés. En ningún estudio ecológico se podrá obtener **TODOS** los datos para evaluar la relación biótica y abiótica sobre un organismos y todas sus interacciones.   Ese modelo es primero demasiado complejo y irreal dentro del concepto de los trabajos científicos. El objetivo es tener una apreciación de los parámetros más importante para definir un cierto patrón o interacciones. Por consecuencia la base de todo estudios esta fundado en las unidades de los muestreos y de la recolección de datos. Si los datos no representa la realidad del estudio la interpretaciones de los análisis pudiese ser errónea. La matemática y sus ecuaciones y modelos no harán que la biología sea más cerca a la realidad si desde el principio los datos y el método de recolección de datos es erróneo.  
+
+En esta sección evaluamos diferentes aspectos de los análisis matriciales poblacional de projección y diferentes aspectos de la recolección de datos que pudiese ser problemáticos cuando uno considera la biología de una especie. La lista de "Impactos" no pretende incluir todos las posibles efecto de datos sin sentido, sino unos ejemplos si uno no considera estos problemas y cómo pueden distorsionar las interpretaciones. Por lo tanto, una advertencia a todos los biólogos de población para que estén consciente de estos temas.
 
 ***
 
@@ -17,7 +26,7 @@ Sin duda, el tema principal para el uso de PPM ha sido evaluar la proyección de
 
 ### Sin Mortalidad/Supervivencia Perfecta
 
-Considere una especie donde se recopilan datos de una especies **Sp1** y la matriz de transición **Sp1matU** es la siguiente y la matriz de fertilidad es **Sp1matF**. Tenga en cuenta que ninguno de los individuos murió en la etapa adulta (supervivencia perfecta). En consecuencia, el tamaño de la población nunca disminuye o aumenta después de un período de tiempo. Bajo TODOS los modelos biológicamente realistas, esperaríamos que el tamaño de la población comenzara a disminuir si una población no tiene reproducción.  Pero en este caso como todos los individuos de la etapa sobreviven la población es *eterna*.  
+Considere una especie donde se recopilan datos de una especies **Sp1** y la matriz de transición **Sp1matU** es la siguiente y la matriz de fertilidad es **Sp1matF**. Tenga en cuenta que ninguno de los individuos murió en la etapa adulta (supervivencia perfecta). En consecuencia, el tamaño de la población nunca disminuye o aumenta después de un período de tiempo. Bajo TODOS los modelos biológicamente realistas, esperaríamos que el tamaño de la población comenzaría a disminuir si una población no tiene reproducción.  Pero en este caso como todos los individuos de la etapa sobreviven la población es *eterna* (algo irreal).  
 
 
 ```{r}
@@ -42,9 +51,9 @@ stages <- c("plantula", "juvenil", "adulto")
 plot_life_cycle(Sp1matU, stages=stages, fontsize = 0)
 ```
 
-Así si analizamos esta matriz asumimos que ninguno de los individuos en etapa adulta muere, en ningún momento!!!. Claramente esto no es realista. Para cualquier especie, la probabilidad de muerte en cualquier etapa nunca es cero (aunque podría ser muy pequeña) y, por lo tanto, nuestra matriz no tiene sentido. Considere una especie de árbol, como *Sequoia*, es probable que para los árboles grandes de esta especie la supervivencia sea muy alta entre un año y otro, pero nunca del 100%.  Es que en el sitio de muestreo NO se observo mortalidad de los arboles grandes. 
+Así si analizamos esta matriz asumimos que ninguno de los individuos en etapa adulta muere, en ningún momento!!!. Claramente esto no es realista. Para cualquier especie, la probabilidad de muerte en cualquier etapa nunca es cero (aunque podría ser muy pequeña) y, por lo tanto, nuestra matriz no tiene sentido. Considere una especie de árbol, como *Sequoia*, es probable que para los árboles grandes de esta especie la supervivencia sea muy alta entre un año y otro, pero nunca del 100%.  Hay que deferenciar entre lo que se observa en periodo y las probabilidades a largo plazo. Es possible que en el sitio de muestreo NO se observo mortalidad de los arboles grandes entre dos periodos de muestreo, que resultaria en una mortalidad de zero pero no es un valor real a largo plazo. 
 
-En el siguiente script mostramos que la población no cambia después de 5-6 periodos y se mantiene cercana a uno y no cambia nada aunque no tengamos reclutas (usamos la matriz de transición sin fecundidad). Si no hay reclutas (matriz de fertilidad), el tamaño de la población debería reducirse con el tiempo. Todo modelos de transiciones que no incluye la matriz de fertilidad debería resultar en reducción de tamaño poblacional. 
+En el siguiente *script* mostramos que la población no cambia después de 5-6 periodos y se mantiene cercana a uno y no cambia nada (usamos la matriz de transición sin fecundidad). Si no hay reclutas (matriz de fertilidad), el tamaño de la población debería reducirse con el tiempo. Todo modelos de transiciones que no incluye la matriz de fertilidad debería resultar en reducción de tamaño poblacional. 
 
 
 
@@ -61,7 +70,7 @@ pop.projection(Sp1matU, n=n)$pop.changes
 ####  Suponga un pequeño cambio en la mortalidad.
 
 
-Tenga en cuenta que en este nuevo modelo, aunque la tasa de supervivencia es muy cercana a cero (0,995) y, en consecuencia, es posible una disminución de la población en cada período de tiempo (aunque solo sea en una pequeña fracción). Siempre hay que considerar si esta taza de mortalidad es biologicamente real o es un resultado del tamaño de la muestra.  Este valor sugiere que se muestreo 1000 individuos y que 995 sobrevivieron.   Si el tamaño fue de 1000, uno pudiese tener confianza en el parametro.  
+Tenga en cuenta que en este nuevo modelo, aunque la tasa de supervivencia es muy cercana a cero (0,995) y, por consecuencia, es posible una disminución de la población en cada período de tiempo (aunque solo sea en una pequeña fracción). Siempre hay que considerar si esta taza de mortalidad es biologicamente real o es un resultado del tamaño de la muestra.  Este valor sugiere que se muestreo 1000 individuos y que 995 sobrevivieron.   Si el tamaño fue de 1000, uno pudiese tener confianza en el parámetro.  
 
 ```{r}
 Sp1matU_2 <- rbind(
@@ -128,13 +137,14 @@ isIrreducible(Sp1matA_2) # incluye todas las transiciones y la fertilidad
 
 ***
 
-### No survivorship
+### Ninguna supervivencia
 
-Mortalidad completa de uno o más estadios. A menudo se observa que la supervivencia de los individuos más pequeños o la primera etapa del ciclo de vida de una especie es muy arriesgada, donde la probabilidad de supervivencia es muy baja. Por ejemplo, la mayoría de las semillas no sobreviven para germinar. Esta es probablemente la norma en las orquídeas donde la producción de semillas es muy alta (a veces millones de semillas en una cápsula de semillas, es decir, *Catasetum*; ref), pero pocas germinan (ref). Sin embargo, esto no se limita a las orquídeas, en los árboles se puede observar el mismo patrón, por ejemplo, en *Nothofagus pumilio* el reclutamiento de plántulas fue inferior al 1,5 % @torres2015seed.  NEED EXAMPLE OF NO SEED OR SEEDLING RECRUITMENTS.   
+La mortalidad es uno de los estadios del ciclo de vida de una especies, pero raramente se añade al ciclo de vida porque es implícito en los cálculos. A menudo se observa que la supervivencia de los individuos más pequeños o la primera etapa del ciclo de vida de una especie es muy arriesgada, donde la probabilidad de supervivencia es muy baja. Por ejemplo, la mayoría de las semillas no sobreviven para germinar. Esta es probablemente la norma en las orquídeas donde la producción de semillas es muy alta (a veces millones de semillas en una cápsula de semillas, es decir, *Catasetum*; ref), pero pocas germinan (ref). Sin embargo, esto no se limita a las orquídeas, en los árboles se puede observar el mismo patrón, por ejemplo, en *Nothofagus pumilio* el reclutamiento de plántulas fue inferior al 1,5 % @torres2015seed.  NEED Other EXAMPLES OF NO SEED OR SEEDLING RECRUITMENTS.   
 
-As it is well known that seed germination in orchids is less than straightforward and many variables may influence seed germination @rasmussen2015germination. .......
 
-En el gráfico del ciclo de vida actual, ninguna de las plántulas sobrevive o crece a la siguiente etapa. Tenga en cuenta que en la primera columna de la matriz de transición todos los valores son cero. La población puede haber comenzado con muchas (incluso miles) de plántulas, pero ninguna creció hasta convertirse en un juvenil o permaneció como plántula antes del siguiente muestreo. Esto da como resultado una matriz que es reducible *esIrreducible* = *FALSO* y en consecuencia no cumple con los requisitos necesarios.
+Como es bien sconocido, la germinación de semillas en las orquídeas no es sencilla y muchas variables pueden influir en la germinación de semillas @rasmussen2015germination .......  más detalle sobre lo que se conoce y lo que no se conoce...
+
+En el gráfico del ciclo de vida actual, ninguna de las plántulas sobrevive o crece a la siguiente etapa. Tenga en cuenta que en la primera columna de la matriz de transición todos los valores son cero. La población puede haber comenzado con muchas (incluso miles) de plántulas, pero ninguna creció hasta convertirse en un juvenil o permaneció como plántula antes del siguiente muestreo. Esto da como resultado una matriz que es reducible *isIrreducible* = *FALSO* y en consecuencia no cumple con los requisitos necesarios.
 
 
 ```{r}
@@ -164,9 +174,9 @@ isIrreducible(Sp1matU_NS)
 
 ## Redondeo excesivo de valores
 
-Uno de los errores más simples en la construcción de los elementos de la matriz es el error de redondeo excesivo u otras estimaciones que dan como resultado valores de supervivencia superiores a 1,00, lo que a veces da como resultado una supervivencia incluso superior al 100 %.
+Uno de los errores más simples en la construcción de los elementos de la matriz es el error de redondeo excesivo u otras estimaciones que dan como resultado valores de supervivencia superiores a 1,00, lo que a veces da como resultado una supervivencia incluso superior al 100%.  Una estimación de supervivencia de mayor de 1 es que de la nada aumenta la cantidad de individuos sin reproducción o clonaje.  
 
-Por ejemplo en un análisis de *Serapia cordigera* @pellegrino2014effects. Aquí los autores evaluaron las transiciones entre latencia, plántulas, roseta vegetativa y floración. Aquí mostramos una de estas matrices en el material suplementario. Período de tiempo 2001-2002, A1.
+Por ejemplo en un análisis de *Serapia cordigera* @pellegrino2014effects. Aquí los autores evaluaron las transiciones entre latencia, plántulas, roseta vegetativa y floración. Aquí mostramos una de estas matrices que esta incluida en el material suplementario del articulo. Período de tiempo 2001-2002, A1.
 
 
 ```{r}
@@ -202,12 +212,12 @@ plot_life_cycle(SerapiaA, stages=stages)
 
 ## Estimaciones de fertilidad y ciclo de vida
 
-La importancia de considerar cómo se incluye la fertilidad en el ciclo de vida es extremadamente influyente en los resultados de los modelos, y si se considera erróneamente puede dar lugar a interpretaciones sin sentido. Mostramos algunos ejemplos de cómo estos pueden incluirse en el ciclo de vida y la matriz y dar como resultado problemas de causa.
+La importancia de considerar cómo se incluye la fertilidad en el ciclo de vida es extremadamente influyente en los resultados de los modelos, y si se considera erróneamente puede dar lugar a interpretaciones sin sentido. Mostramos algunos ejemplos de cómo estos pueden incluirse en el ciclo de vida y la matriz y dar como resultado problemas de causa. Vea el capitulo \@ref(Fertilidad) para más detalle. 
 
 
 ### Ciclo de vida y etapa de fertilidad incorrectos
 
-Suponga que tiene una especie en la que modela el ciclo de vida como plántula, juvenil y adulto. La fertilidad se mide como el número de semillas producidas por un adulto (número medio de semillas por adulto). Después de recopilar los cálculos de datos, se determina que el número medio de semillas por adulto es 11000. Si agregamos la matriz de transición y fertilidad a continuación y evaluamos el lambda y graficamos el crecimiento de la población con la función *proyecto*, tenemos un lambda de 4.93 y después de solo 5 períodos de tiempo, el número de adultos supera los 250.000. En consecuencia, la estimación de la tasa de crecimiento de la población sería incorrecta y engañosa. 
+Suponga que tiene una especie en la que modela el ciclo de vida como plántula, juvenil y adulto. La fertilidad se mide como el número de semillas producidas por un adulto (número medio de semillas por adulto). Después de recopilar los cálculos de datos, se determina que el número medio de semillas por adulto es 11000. Si agregamos la matriz de transición y fertilidad a continuación y evaluamos el lambda y graficamos el crecimiento de la población con la función *proyecto*, tenemos un lambda de 4.93 y después de solo 5 períodos de tiempo, el número de adultos supera los 250,000. Por consecuencia, la estimación de la tasa de crecimiento de la población sería incorrecta y engañosa, donde 30% de 11,000 semillas crecen a ser plántulas, un total de 3,300 plantulas!!! 
 
 El error es que el valor en la matriz de fertilidad debería corresponder a la primera etapa de la matriz, en este caso la etapa de plántula. Por lo tanto, la esquina superior derecha de la matriz de fertilidad no debe ser la **cantidad media de semillas** por planta, sino la **cantidad media de plántulas** producidas por una planta adulta.
 
@@ -238,7 +248,7 @@ pr <- project(Sp1matA_Fert, vector="n", time=5)
 plot(pr) # Note that even after just 5 time periods, the number of adults is larger than 250,000 individuals
 ```
 
-Si deseamos agregar una etapa de semilla, debemos incluir la etapa en nuestro modelo y matriz con una nueva etapa *la etapa de semilla*, y tener una estimación del número de semillas que germinan y se convierten en plántulas. En el caso de las orquídeas, es probable que sea una estimación difícil de lograr porque las semillas de las orquídeas son difíciles de seguir en la naturaleza a menos que se haya desarrollado el método del paquete de semillas o se utilizó algún método de huella genética para determinar la procedencia de las semillas.
+Si deseamos agregar una etapa de semilla, debemos incluir la etapa en nuestro modelo y matriz con una nueva etapa *la etapa de semilla*, y tener una estimación del número de semillas que germinan y se convierten en plántulas. En el caso de las orquídeas, es probable que sea una estimación difícil de lograr porque las semillas de las orquídeas son difíciles de seguir en la naturaleza a menos que se haya usado el método del paquete de semillas (ref) o se utilizó algún método de huella genética para determinar la procedencia de las semillas.
 
 ```{r}
 library(DiagrammeR)
@@ -270,7 +280,7 @@ pr <- project(Sp1matA_Fert2, vector="n", time=5)
 plot(pr) # Note that now the number of adults did not increase to the level of the previous model
 ```
 
-En el ejemplo anterior no hemos incluido una etapa de latencia de semillas. En muchas especies de plantas, las semillas pueden permanecer latentes durante uno o más años. No se sabe si las semillas de las orquídeas están inactivas durante mucho tiempo @gale2010restricciones, excepto para algunas especies que han demostrado que las semillas aún están vivas después de varios años en el suelo usando la prueba de tinción de tetrazolio @rasmussen1993seed y @whigham2006seed.
+En el ejemplo anterior no hemos incluido una etapa de latencia de semillas. En muchas especies de plantas, las semillas pueden permanecer latentes durante uno o más años. No se sabe si las semillas de las orquídeas están inactivas durante mucho tiempo @gale2010restricciones, excepto para algunas especies que han demostrado que las semillas aún están vivas después de varios años en el suelo usando la prueba de tinción de tetrazolio @rasmussen1993seed y @whigham2006seed. MAS REFERENCIAS!!
 
 ***
 
@@ -283,7 +293,7 @@ Las estimaciones de dispersión en los parámetros de la matriz de supervivencia
 
 Los parámetros de supervivencia, muerte, estasis y transiciones NO se distribuyen normalmente ya que los valores van de cero a 1. Ningún valor puede ser menor que cero o mayor que uno, incluidos los intervalos de confianza del 95 % (limitados por 0 y 1). Si se usa la distribución gaussiana (normal) es probable que el IC del 95 % esté fuera de los límites. Supongamos que deseamos calcular la probabilidad de supervivencia de una etapa y sus intervalos de confianza del 95%.
 
-Encuestamos a 20 individuos de los cuales 19 sobrevivieron
+Se deterimna que de 20 individuos 2 fallecen y 19 sobrevivieron entre el primer muestreo y el segundo. 
 
  - Construya un intervalo de confianza del 95% de la proporción de individuos que murieron
  
@@ -303,7 +313,7 @@ p
 El IC del 95% de una proporción se calcula
 
 $$ \hat{p}\pm Z_{0.05}*\sqrt{}(\frac{\hat{p}(1-\hat{p})}{n})$$
-- Z_{0.05} es el valor crítico de Z para un IC del 95% = 1.955
+- Z_{0.05} es el valor crítico de Z para un IC del 95% = 1.955.  Nota que ese calculo, uno de los intervalos de confianza es negativo.
 
 ```{r}
 n=20
@@ -325,6 +335,8 @@ resultado=propCI(n=20, p=0.05, alpha=0.05)
 resultado
 ```
 
+## Distribución Dirichlet de intervalo de confianza
+
 Sin embargo, ¿cómo se calcula el IC del 95% cuando hay más de 2 proporciones? Debido a que la proporción de todas las etapas depende de la proporción de las otras etapas, el análisis debe considerar la proporción y el IC del 95% debe incluir todas las etapas simultáneamente. La función requerida es la función de Dirichlet multinomial (multigrupo).
 
 
@@ -345,13 +357,12 @@ plot_life_cycle(Dirichlet, stages=stages)
 ```
 
 
-## Enfoque de Dirichlet para estimar intervalos de confianza
 
-Para evaluar el intervalo IC del 95% simultáneamente de las cuatro transiciones, usamos la **biblioteca (MCMCpack)**, que es un paquete dedicado a realizar simulaciones de Markov Chain Monte Carlo. Usaremos la función *MCmultinomdirichlet*. Tenga en cuenta que la primera lista son las proporciones que se muestran en la matriz para la etapa de plántula c(.50*b,.2*b,.0*b,.3*b) multiplicadas por el tamaño de la muestra b= 25. La segunda lista son los priores bayesianos c(.5,.2,0.0001,.3), en este caso asumí que la suma de los previos es igual a 1. Esto da como resultado una confianza muy baja en la percepción previa de lo que es la transición. son. La segunda suposición es que los previos para la transición observada son iguales, sin embargo, podríamos haber usado c(1,1,0,.000001, 1), donde este previo sugiere una transición igual para todos menos las plántulas que crecen hasta convertirse en adultos.   
+Para evaluar el intervalo IC del 95% simultáneamente de las cuatro transiciones, usamos la **library(MCMCpack)**, que es un paquete dedicado a realizar simulaciones de *Markov Chain Monte Carlo*. Usaremos la función *MCmultinomdirichlet*. Tenga en cuenta que la primera lista son las proporciones que se muestran en la matriz para la etapa de plántula c(.50*n,.02*n,.0*n,.3*n) multiplicadas por el tamaño de la muestra n= 25. La segunda lista son los priores bayesianos c(.5,.2,0.0001,.3), en este caso asumí que la suma de los previos es igual a 1. Esto da como resultado una confianza muy baja en la percepción previa de lo que es la transiciones. Otro tipo de previa para la transición es que sean iguales, sin embargo, podríamos haber usado c(1,1,0,.000001, 1), donde este previo sugiere una transición igual para todos menos las plántulas que hay muy poca probabilidad que crezcan hasta convertirse en adultos.   
 
-El concepto de lo anterior no se puede explicar completamente aquí, consulte las siguientes referencias para obtener información más detallada.
+El concepto de lo anterior no se puede explicar completamente aquí, consulte las siguientes referencias para obtener información más detallada.  ANADIR referencias sobre previas.....
 
-Los resultados en la figura muestran que hay mucha dispersión alrededor de la proporción media de las estadísticas y la transición como se esperaba debido al pequeño tamaño de la muestra. Para convencerte, cambia el valor de **b** a un número grande y verás cómo cambia la distribución.
+Los resultados en la figura muestran que hay mucha dispersión alrededor de la proporción media de las estadísticas y la transición como se esperaba debido al pequeño tamaño de la muestra. 
 
 
 ```{r, message=FALSE}
@@ -361,8 +372,8 @@ library(MCMCpack)
 
 
 ```{r}
-b=25
-L=posteriorPRIORL <- MCmultinomdirichlet(c(.50*b,.2*b,.0*b,.3*b), c(.5,.2,0.0001,.3), mc=10000)
+n=25
+L=posteriorPRIORL <- MCmultinomdirichlet(c(.50*n,.2*n,.0*n,.3*n), c(.5,.2,0.0001,.3), mc=10000)
 dfL=as.data.frame(L)
 t(summary(dfL))
 
@@ -390,7 +401,7 @@ ggplot(data=All_Data3, aes(x=values, fill=ind, colour=ind))+
 
 Ahora calculemos el IC del 95% de las transiciones
 
-  - Intervalos de confianza de transiciones, estasis y supervivencia basados ​​en simulación y distribución de Dirichlet.
+  - Intervalos de confianza de transiciones, estasis y supervivencia basados en simulación y distribución de Dirichlet.
   
 Aspectos importantes a tener en cuenta.
 
@@ -421,9 +432,9 @@ Transitions
 ```
 
 
-Para comparar con el ejemplo anterior aumimos que en lado de tener solamente 25 plantas teniamos 250 plantas para ls estimados.
+Para comparar con el ejemplo anterior asumimos que en lado de tener solamente 25 plantas teníamos 250 plantas para los estimados.
 
-Nota que la mediana sigue en el mismo lugar (casi) pero los IC cambian mucho y es más reducido, ya que con más datos en el muestreo resulta en más confianza y reducción en el IC. 
+Nota que la mediana sigue en el mismo lugar (casi) pero los IC cambian mucho y es más reducido, ya que con más datos en el muestreo resulta en más confianza y reducción en el IC. Este analisis es primordial para enterder la confianza que uno debería tener sobre los estimados de los parámetros de la matriz.   Un ejemplo si se observa un IC muy grande eso pudiese ser utilizado para modificar la recolección de datos en el campo para aumentar el tamaño de muestra de esa etapa de vida. 
 
 
   
