--- a/book.bib
+++ b/book.bib
@@ -18,6 +18,59 @@
   publisher={Elsevier}
 }
 
+@article{ackerman1996seedling,
+  title={Seedling establishment in an epiphytic orchid: an experimental study of seed limitation},
+  author={Ackerman, James D and Sabat, A and Zimmerman, JK},
+  journal={Oecologia},
+  volume={106},
+  pages={192--198},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{whigham2006seed,
+  title={Seed longevity in terrestrial orchids--potential for persistent in situ seed banks},
+  author={Whigham, Dennis F and O’Neill, John P and Rasmussen, Hanne N and Caldwell, Bruce A and McCormick, Melissa K},
+  journal={Biological conservation},
+  volume={129},
+  number={1},
+  pages={24--30},
+  year={2006},
+  publisher={Elsevier}
+}
+
+
+@article{rasmussen1993seed,
+  title={Seed ecology of dust seeds in situ: a new study technique and its application in terrestrial orchids},
+  author={Rasmussen, Hanne N and Whigham, Dennis F},
+  journal={American journal of botany},
+  volume={80},
+  number={12},
+  pages={1374--1378},
+  year={1993},
+  publisher={Wiley Online Library}
+}
+
+
+@article{turnbull2000plant,
+  title={Are plant populations seed-limited? A review of seed sowing experiments},
+  author={Turnbull, Lindsay A and Crawley, Michael J and Rees, Mark},
+  journal={Oikos},
+  volume={88},
+  number={2},
+  pages={225--238},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@article{tremblay2003population,
+  title={Population dynamics in orchid conservation: a review of analytical methods based on the rare species Lepanthes eltoroensis},
+  author={Tremblay, Raymond L and Hutchings, Michael J},
+  journal={Orchid conservation. Kota Kinabalu: Natural History Publications (Borneo)},
+  pages={183--204},
+  year={2003}
+}
+
 
 @article{mcgraw1996estimation,
   title={Estimation of individual fitness from life-history data},
